// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-select multi should not render a native select on a mobile / tablet screen 1`] = `
<ic-select
  label="IC Select Test"
  multiple="true"
/>
`;

exports[`ic-select multi should test keydown on menu - arrow down, up, and enter 1`] = `
<ic-select label="IC Select Test" multiple="true">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-70" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default menu-open">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-70-menu" aria-describedby="" aria-expanded="true" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, 1 of 3 selected, Test label 1" aria-owns="ic-select-input-70-menu" class="select-input" id="ic-select-input-70">
              <ic-typography class="value-text" variant="body">
                <p>
                  Test label 1
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon expand-icon-open">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default multiple no-focus no-results open" data-popper-placement="bottom-start" data-popper-reference-hidden open="" style="position: absolute; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 7px);">
        <ul aria-activedescendant="ic-select-input-70-menu-Test value 1" aria-label="IC Select Test pop-up" aria-multiselectable="true" class="menu" id="ic-select-input-70-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="Test label 1" aria-selected="true" class="focused-option option" data-label="Test label 1" data-value="Test value 1" id="ic-select-input-70-menu-Test value 1" role="option" tabindex="0">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 1
                  </p>
                </ic-typography>
              </div>
            </div>
            <span class="check-icon">
              svg
            </span>
          </li>
          <li aria-disabled="false" aria-label="Test label 2" aria-selected="false" class="option" data-label="Test label 2" data-value="Test value 2" id="ic-select-input-70-menu-Test value 2" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 2
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
          <li aria-disabled="false" aria-label="Test label 3" aria-selected="false" class="option" data-label="Test label 3" data-value="Test value 3" id="ic-select-input-70-menu-Test value 3" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 3
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
      <div aria-live="polite" class="multi-select-selected-count" role="status">
        1 of 3 selected
      </div>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-70" type="hidden" value="Test value 1">
</ic-select>
`;

exports[`ic-select multi should test keydown on menu - arrow down, up, and enter 2`] = `
<ic-select label="IC Select Test" multiple="true">
  <mock:shadow-root>
    <ic-input-container>
      <ic-input-label for="ic-select-input-70" helpertext="" label="IC Select Test"></ic-input-label>
      <ic-input-component-container class="default menu-open">
        <!---->
        <div class="focus-indicator">
          <div class="select-container">
            <button aria-controls="ic-select-input-70-menu" aria-describedby="" aria-expanded="true" aria-haspopup="listbox" aria-invalid="false" aria-label="IC Select Test, 2 of 3 selected, Test label 1, Test label 2" aria-owns="ic-select-input-70-menu" class="select-input" id="ic-select-input-70">
              <ic-typography class="value-text" variant="body">
                <p>
                  Test label 1, Test label 2
                </p>
              </ic-typography>
              <div class="select-input-end">
                <span aria-hidden="true" class="expand-icon expand-icon-open">
                  svg
                </span>
              </div>
            </button>
          </div>
        </div>
      </ic-input-component-container>
      <ic-menu class="default multiple no-focus no-results open" data-popper-placement="bottom-start" data-popper-reference-hidden open="" style="position: absolute; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 7px);">
        <ul aria-activedescendant="ic-select-input-70-menu-Test value 2" aria-label="IC Select Test pop-up" aria-multiselectable="true" class="menu" id="ic-select-input-70-menu" role="listbox" tabindex="-1">
          <li aria-disabled="false" aria-label="Test label 1" aria-selected="true" class="option" data-label="Test label 1" data-value="Test value 1" id="ic-select-input-70-menu-Test value 1" role="option" tabindex="0">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 1
                  </p>
                </ic-typography>
              </div>
            </div>
            <span class="check-icon">
              svg
            </span>
          </li>
          <li aria-disabled="false" aria-label="Test label 2" aria-selected="true" class="focused-option option" data-label="Test label 2" data-value="Test value 2" id="ic-select-input-70-menu-Test value 2" role="option" tabindex="0">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 2
                  </p>
                </ic-typography>
              </div>
            </div>
            <span class="check-icon">
              svg
            </span>
          </li>
          <li aria-disabled="false" aria-label="Test label 3" aria-selected="false" class="option" data-label="Test label 3" data-value="Test value 3" id="ic-select-input-70-menu-Test value 3" role="option" tabindex="-1">
            <div class="option-text-container">
              <div class="option-label">
                <ic-typography aria-hidden="true" variant="body">
                  <p>
                    Test label 3
                  </p>
                </ic-typography>
              </div>
            </div>
          </li>
        </ul>
      </ic-menu>
      <div aria-live="polite" class="multi-select-selected-count" role="status">
        2 of 3 selected
      </div>
    </ic-input-container>
  </mock:shadow-root>
  <input class="ic-input" name="ic-select-input-70" type="hidden" value="Test value 1,Test value 2">
</ic-select>
`;

exports[`ic-select searchable should render as required: required-searchable 1`] = `
<ic-select
  label="IC Select Test"
  required="true"
  searchable="true"
/>
`;

exports[`ic-select single should have correct validation status: with-validation-status-error 1`] = `
<ic-select
  label="IC Select Test"
  validation-status="error"
/>
`;

exports[`ic-select single should not have a validation status if disabled: no-validation-status-if-disabled 1`] = `
<ic-select
  disabled=""
  label="IC Select Test"
  validation-status="error"
/>
`;

exports[`ic-select single should not render a label when the 'hide-label' prop is supplied: hide-label-set 1`] = `
<ic-select
  hide-label=""
  label="IC Select Test"
/>
`;

exports[`ic-select single should not render validation text if no validation status has been supplied: no-validation-text-if-no-status 1`] = `
<ic-select
  label="IC Select Test"
  validation-text="Test validation text"
/>
`;

exports[`ic-select single should render correct validation text: with-validation-text 1`] = `
<ic-select
  label="IC Select Test"
  validation-status="error"
  validation-text="Test validation text"
/>
`;

exports[`ic-select single should render readonly: readonly 1`] = `
<ic-select
  label="IC Select Test"
  readonly="true"
/>
`;

exports[`ic-select single should test select as submit on form 1`] = `<form id="new-form"></form>`;

exports[`ic-select single should test with clear button: with-clear-button 1`] = `
<ic-select
  label="IC Select Test"
  show-clear-button="true"
  value="test-value"
/>
`;
